# LoRA

./: .gitignore  cross-file.txt  meson.build
app/: meson.build
app/src/: main.cpp  stm32f4xx_it.c
board/: meson.build
board/drivers/: meson.build
board/f411re/: board_config.h  meson.build
libs/: meson.build
libs/FreeRTOS-Kernel/: meson.build
src/: main.cpp  syscalls.c
toolchain/: meson.build
